# Sustainability-Extension

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt  webscraping.py
WebApp/: Content.js  background.js  manifest.json
WebApp copy/: Content.js  background.js  popup.html  popup.js  tmp  tmp.txt
climatiq_data/: activity_id.json  final.json
sustainability_api/: 127.0.0.1.crt  127.0.0.1.key  db.sqlite3
sustainability_api/api/: documents.py  models.py  serializers.py  urls.py  views.py
sustainability_api/api/migrations/: 0001_initial.py  0002_item.py  0003_item_removed_alter_item_id.py  0004_item_product_id_alter_item_id.py  0005_alter_item_product_id.py  0006_cart_delete_item.py
sustainability_api/home/: views.py
sustainability_api/home/templates/home/: index.html
sustainability_api/sustainability_api/: asgi.py  settings.py  urls.py  wsgi.py
